force-app/main/default/objects/Board_Term__c/Board_Term__c.object-meta.xml
<CustomObject>
    <description>One record per board member per term of service (a term can span multiple fiscal years). Holds the member's board role, term start/end (expiration), status, and default annual giving commitment. "The current board" = Board Terms where Is Current = true. No Board object is used because JCRC tracks a single governing board (D13); add a Board__c lookup here later if a second body is ever tracked. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Board Term</label>
    <nameField>
        <displayFormat>BT-{00000}</displayFormat>
        <label>Board Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>