force-app/main/default/objects/Board_Term__c/fields/Annual_Commitment_Default__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commitment_Default__c</fullName>
    <description>Default annual giving commitment for this member during this term. Automation propagates it to each covered board year's Annual Giving Summary (Board Commitment), where it can be overridden per year. Falls back to the Board Setting default when blank. JSI-123 / Jason Ott.</description>
    <label>Annual Commitment (Default)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>