force-app/main/default/objects/Board_Term__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <description>Which board this term is served on (JCRC / UJA / UJA Observer). Drives the base commitment and the term length used by Must Roll Off. JSI-123 / Jason Ott.</description>
    <label>Board</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Board Terms</relationshipLabel>
    <relationshipName>Board_Terms</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>