force-app/main/default/objects/Board_Term__c/fields/Board_Role__c.field-meta.xml
<CustomField>
    <fullName>Board_Role__c</fullName>
    <description>The member's role on the board. PLACEHOLDER value set pending JCRC's definitive officer list (client Q7). JSI-123 / Jason Ott.</description>
    <label>Board Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Vice-Chair</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
            <value>
                <fullName>Immediate Past Chair</fullName>
            </value>
            <value>
                <fullName>Emeritus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>