force-app/main/default/objects/Board_Term__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The board member. Restrict delete so a contact with board history cannot be removed. JSI-123 / Jason Ott.</description>
    <label>Board Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Board Terms</relationshipLabel>
    <relationshipName>Board_Terms</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>