force-app/main/default/objects/Board_Term__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date the term expires. When reached, the member should roll off the board (see Roll-Off Action setting). Blank = open/indefinite (discouraged). JSI-123 / Jason Ott.</description>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>