force-app/main/default/objects/Board_Term__c/fields/Expiring_Soon__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Soon__c</fullName>
    <description>TRUE when a current term's End Date is within the "expiring soon" window (Board Setting Expiring_Soon_Window_Days, default 90). Drives roster/report warnings for timely roll-off. JSI-123 / Jason Ott.</description>
    <formula>AND(
  Is_Current__c,
  NOT(ISBLANK(End_Date__c)),
  End_Date__c &lt;= TODAY() + BLANKVALUE($CustomMetadata.Board_Setting__mdt.Default.Expiring_Soon_Window_Days__c, 90)
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Expiring Soon</label>
    <type>Checkbox</type>
</CustomField>