force-app/main/default/objects/Board_Term__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <description>The member's type on the board (JCRC Recruited / UJA Appointed / UJA Observer). Sets the term length (auto-fills End Date + generates the per-year records) and the base annual commitment. JSI-123 / Jason Ott.</description>
    <label>Member Type</label>
    <referenceTo>Board_Member_Type__c</referenceTo>
    <relationshipLabel>Board Terms</relationshipLabel>
    <relationshipName>Board_Terms</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>