force-app/main/default/objects/Board_Term__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the term of service began. JSI-123 / Jason Ott.</description>
    <label>Term Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>