force-app/main/default/objects/Board_Term__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the term. Only "Active" terms within their date window count toward the current board (see Is Current). JSI-123 / Jason Ott.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Rolled Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>