force-app/main/default/objects/Board_Term__c/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <description>Which consecutive term this is for the member (1st, 2nd, ...). Optional; supports term-limit tracking. JSI-123 / Jason Ott.</description>
    <label>Term Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>