force-app/main/default/objects/Board_Term__c/fields/Term_Year_Label__c.field-meta.xml
<CustomField>
    <fullName>Term_Year_Label__c</fullName>
    <description>Human-readable term span for display, e.g. "2025-2028". JSI-123 / Jason Ott.</description>
    <formula>IF(
  ISBLANK(Start_Date__c), "",
  TEXT(YEAR(Start_Date__c)) &amp;
  IF(NOT(ISBLANK(End_Date__c)), "-" &amp; TEXT(YEAR(End_Date__c)), " - present")
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Term Years</label>
    <type>Text</type>
</CustomField>