force-app/main/default/objects/Board_Term__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <description>When both are set, Term End Date must be after Term Start Date. JSI-123 / Jason Ott.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Start_Date__c)),
  NOT(ISBLANK(End_Date__c)),
  End_Date__c &lt;= Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Term End Date must be after Term Start Date.</errorMessage>
</ValidationRule>